Complete specific merchant page interface