@@ -10,7 +10,6 @@ import ynu.jackielinn.xhs_springboot3.service.ProductService;
 import ynu.jackielinn.xhs_springboot3.utils.Proxy;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class ProductServiceImpl extends ServiceImpl<ProductMapper, Product> implements ProductService {
@@ -22,14 +21,14 @@ public class ProductServiceImpl extends ServiceImpl<ProductMapper, Product> impl
         return allProducts.stream()
                 .limit(6)
                 .map(Proxy::product2VO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
     public List<ProductVO> getAllProducts() {
         return this.list().stream()
                 .map(Proxy::product2VO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
@@ -38,12 +37,30 @@ public class ProductServiceImpl extends ServiceImpl<ProductMapper, Product> impl
         wrapper.eq(Product::getType, type);
         return this.list(wrapper).stream()
                 .map(Proxy::product2VO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
     public ProductVO getProductById(Long id) {
         Product product = this.getById(id);
         return Proxy.product2VO(product);
+    }
+
+    @Override
+    public Integer getTotalSoldByMid(long mid) {
+        LambdaQueryWrapper<Product> wrapper = new LambdaQueryWrapper<>();
+        wrapper.eq(Product::getMid, mid);
+        return this.list(wrapper).stream()
+                .mapToInt(Product::getPayers)
+                .sum();
+    }
+
+    @Override
+    public List<ProductVO> getProductsByMid(long mid) {
+        LambdaQueryWrapper<Product> wrapper = new LambdaQueryWrapper<>();
+        wrapper.eq(Product::getMid, mid);
+        return this.list(wrapper).stream()
+                .map(Proxy::product2VO)
+                .toList();
     }
 }
